fix: remove read more button row for regular News pages, add bottom margin for more spacing before the footer

--- a/src/_includes/assets/css/screen.css
+++ b/src/_includes/assets/css/screen.css
@@ -2123,6 +2123,7 @@ p.footer-donation a:hover {
   justify-content: center;
   padding-bottom: 2vw;
   padding-top: 2vw;
+  margin-bottom: 30px;
 }
 
 #readMoreBtn {
